--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,3 +1,45 @@
-.Footer {
-  background-color: chartreuse;
+.footer1 {
+  background-color: white;
+  display: flex;
+  padding: 20px;
+  text-align: left;
+}
+
+.footer1 h2 {
+  color: #3399cc;
+  padding-left: 25px;
+}
+.updates {
+  max-width: 700px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f4f4;
+  padding: 10px;
+  margin-right: 20px;
+}
+
+.quicklinks,
+.ourpages {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  max-width: 300px;
+  width: 100%;
+  background-color: #f4f4f4;
+  padding-right: 10px;
+  margin-right: 15px;
+}
+
+.quicklinksul {
+  list-style: none;
+}
+
+.ourpagesul {
+  list-style: none;
+}
+
+.quicklinksul li,
+.ourpagesul li {
+  padding-bottom: 10px;
 }
