--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,3 +1,24 @@
-.Main {
-  background-color: darkgreen;
+.Title {
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: medium;
+}
+.Categories {
+  display: flex;
+  float: left;
+}
+.allPost {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0px 50px 0px 50px;
+}
+
+.teslaPost {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0px 50px 0px 50px;
 }
