--- a/blog/src/components/Navbar/Navbar.module.css
+++ b/blog/src/components/Navbar/Navbar.module.css
@@ -1,77 +1,28 @@
-/* .Navbar {
-  background-color: darkorange;
-} */
+.navbar1 {
+  position: absolute;
+  color: white;
+  top: 80px;
+  right: 80px;
+  font-size: 20px;
+}
 
-.navContent {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 100px;
-}
-h1 {
-  color: #fff;
-}
-h1:hover {
-  color: #3399cc;
-  transition: all 0.4s ease;
-}
-.navBarList ul {
+.ull {
   list-style: none;
   display: flex;
+  justify-content: flex-end;
+  align-items: right;
+  padding-right: 20px;
+  text-align: right;
 }
-.navBarList ul li {
-  padding: 0 30px;
+.ull li {
+  padding-right: 35px;
+  padding-top: 15px;
 }
-.navBarList a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 25px;
-  text-transform: uppercase;
-  padding-bottom: 7px;
-}
-.navBarList a:hover {
-  border-bottom: 1px solid #fff;
-  color: #fff;
-}
-.firstNavElement {
-  border-bottom: 1px solid #fff;
-}
-.navHeading {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7));
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 50px;
-  text-align: center;
-}
-.navIcon i {
-  font-size: 60px;
-  color: #fff;
-}
-.navIcon i:hover {
-  color: #3399cc;
-  transition: all 0.4s ease;
-}
-.navIcon:hover {
-  color: #3399cc;
-}
-.linkHolder {
-  text-decoration: none;
-}
-.navBar ul {
-  list-style: none;
-  display: flex;
-}
-.navBar ul li {
-  list-style: none;
-  margin-left: 50px;
-}
-.navBar ul li a {
-  text-decoration: none;
-  font-size: 32px;
-  color: gray;
-}
-.navBar ul li a:hover {
-  border-bottom: 2px solid #fff;
+
+.ull li:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-underline-position: under;
+  border: none;
+  outline: none;
 }
